feat(codecov) CodeCov Integration

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -20,3 +20,9 @@ jobs:
 
       - name: Testing Running
         run: yarn test --coverage
+
+      - name: Upload coverage reports to Codecov
+        uses: codecov/codecov-action@v4.0.1
+        with:
+          token: ${{ secrets.CODECOV_TOKEN }}
+          slug: adrianojcgit/github-actions-lesson
